--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="home" id="home">
-  <h1 class="pageTitle">Recent Activities</h1>
+  <h1 class="pageTitle"></h1>
   <ul class="posts noList">
     {% for post in paginator.posts %}
       <li>
